--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,3 +18,33 @@ h1
     color:blue;
     text-align:center;
 }
+p
+{
+    text-align: center;
+    font-size:20px;
+    color:darkgreen;
+    font-weight: bold;
+}
+iframe
+{
+    border-radius: 30px;
+}
+.imgone
+{
+    margin-left: 1.5cm;
+}
+.oonn
+{
+    background-color: darkgray;
+    border-radius:30px;
+    padding:30px;
+}
+form
+{
+    font-size:20px;
+    font-weight: bold;
+}
+.butcenter
+{
+    align-items:center ;
+}
