--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 </div>
 <br>
 <h1> Our Services</h1>
-
+<br>
 <div class="container-md">
     <div class="row">
         <div class="col-4">
@@ -62,3 +62,46 @@
 <br>
 <br>
 <img src="assets/22.jpg" class="img-fluid">
+<br>
+<br>
+<h1> Our Location </h1>
+<br>
+<div class="container-md">
+  <div class="row">
+    <div class="col-4 align-self-center">
+      <p> We are in Kurunegla <br> Main Streest and Kurunegla<br> Sri Lanka<br> And We have another location<br> Colombo Main Street and Colombo</p>
+    </div>
+    <div class="col-4">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d126596.9403495568!2d80.19866420000001!3d7.4481659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2slk!4v1722913384594!5m2!1sen!2slk" width="400" height="400" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <div class="col-4 align-self-center">
+    <img src="assets/12.jpg" class="img-fluid imgone">
+  </div>
+</div>
+<br>
+<h1> Enter your information to calculate Your BMI Value </h1>
+<br>
+<div class="container-md oonn">
+  <div class="row justify-content-md-center">
+    <div class="col-8">
+<form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Your Name</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Name">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Enter your Weight</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="weight" [(ngModel)]="weight" placeholder="Enter Your Weight in (Kg)">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Enter your Height</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="height" [(ngModel)]="height" placeholder="Enter Your Height in (Cm)">
+  </div>
+  <br>
+  <br>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Your BMI Result : {{bmi}}</label>
+  </div>
+  <button type="submit" class="btn btn-primary butcenter" (click) = "calculate()">Submit</button>
+</form>
+</div>
