--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,41 @@
-<p>about works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <img src="assets/fuk.jpg" alt="" class="img-fluid">
+        </div>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<div class="container-md">
+    <div class="row">
+        <div class="col-6">
+            <img src="assets/12.jpg" alt="" class="img-fluid">
+        </div>
+    <div class="col-6 align-self-center">
+        <p>How the brain controls complex movements has been a mystery. Advances in artificial intelligence now make it possible to simulate this process in virtual animals. Comparing activations in artificial control networks with brain activity in real animals enables long-standing theories of motor control at the level of neural circuits to be probed.</p>
+
+    </div>
+
+    </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="container-md">
+    <div class="row">
+        <div class="col-6">
+            <p>How the brain controls complex movements has been a mystery. Advances in artificial intelligence now make it possible to simulate this process in virtual animals. Comparing activations in artificial control networks with brain activity in real animals enables long-standing theories of motor control at the level of neural circuits to be probed.</p>
+            
+        </div>
+    <div class="col-6 align-self-center">
+        <img src="assets/12.jpg" alt="" class="img-fluid">
+
+    </div>
+
+    </div>
+</div>
+
