Add contant page

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="#">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contants</a>
+            <a class="nav-link" routerLink="/Contant">Contants</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
